--- a/index3.html
+++ b/index3.html
@@ -11,7 +11,7 @@ p {color:blue}
 
 <body>
   <h1>DAY 12<h1>
-  <p>DAILY ASSIGNMENT</p>
-  <p>Today I learned html and css to create webpage.</p>
+  <h2>HTML IMAGE</h2>
+  <img src="img762.jpg" alt="image"></img>
 </body>
 </html>
